fix: yalb(alignment): fix grand hero content alignment

--- a/components/02-molecules/banner/grand-hero/_yds-grand-hero.scss
+++ b/components/02-molecules/banner/grand-hero/_yds-grand-hero.scss
@@ -89,13 +89,12 @@ $break-grand-hero-banner: tokens.$break-m;
     align-items: center;
   }
 
-  [data-grand-hero-width='site'] & {
+  [data-grand-hero-overlay-variation='contained'][data-grand-hero-width='site']
+    & {
     // prettier-ignore
-    max-width: calc(var(--size-component-layout-width-site) + (var(--size-spacing-10)));
+    max-width: calc(var(--size-component-layout-width-site) + (var(--size-spacing-site-gutter) * 2));
 
     @media (min-width: $break-grand-hero-banner) {
-      // prettier-ignore
-      max-width: calc(var(--size-component-layout-width-site) + (var(--size-spacing-site-gutter) * 2));
       margin: 0 auto;
     }
   }
@@ -160,6 +159,15 @@ $break-grand-hero-banner: tokens.$break-m;
 
   > * {
     max-width: var(--size-component-layout-width-content);
+  }
+
+  [data-grand-hero-width='site'] & {
+    // prettier-ignore
+    max-width: var(--size-component-layout-width-site);
+
+    @media (min-width: $break-grand-hero-banner) {
+      margin: 0 auto;
+    }
   }
 }
 
